<!--sessionState一定要放這裡 Asp.Net state service要打開-->   <system.web>
    <sessionState mode="StateServer"
                  stateConnectionString="tcpip=localhost:42424">
    </sessionState>

--- a/Module11_01/Web.config
+++ b/Module11_01/Web.config
@@ -10,7 +10,7 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
-  <!--sessionState一定要放這裡-->
+  <!--sessionState一定要放這裡 Asp.Net state service要打開-->
   <system.web>
     
     <sessionState mode="StateServer"
